--- a/main.tex
+++ b/main.tex
@@ -126,7 +126,7 @@
 
 
 
-\title{Improved Analysis of SVGD \\under Talagrand's Inequality T1}
+\title{$\cO(1/n)$ convergence of SVGD \\ under Talagrand's Inequality}
 
 % The \author macro works with any number of authors. There are two commands
 % used to separate the names and addresses of multiple authors: \And and \AND.
